reposnake/namespace-reposnake.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reposnake
  annotations:
    argocd.argoproj.io/sync-options: PruneLast=true
    noa.re/deploy-id: b9a378811890112c
