reposnake/deployment-repo-noa-re.yaml
# Source: repo.noa.re
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repo-noa-re
  labels:
    app: repo-noa-re
  namespace: reposnake
  annotations:
    noa.re/deploy-id: 3afd0480220bd89d
spec:
  replicas: 3
  selector:
    matchLabels:
      app: repo-noa-re
  template:
    metadata:
      labels:
        app: repo-noa-re
      annotations:
        checksum/config: f4c50086bd3b0505c4568652bb6fcf094b7310a7c57ceab110da1dea48ed6240
    spec:
      containers:
      - name: repo-noa-re
        image: repo.noa.re/reposnake:0.2.1-70eb4838
        args:
        - -c
        - /config/reposnake.toml
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        volumeMounts:
        - name: repo-noa-re-config
          mountPath: /config
        - name: emptydir-var-tmp
          mountPath: /var/tmp
        - name: tokens
          mountPath: /var/run/secrets/tokens
          readOnly: true
      volumes:
      - name: repo-noa-re-config
        configMap:
          name: repo-noa-re-config
      - name: emptydir-var-tmp
        emptyDir: {}
      - name: tokens
        projected:
          sources:
          - serviceAccountToken:
              path: idmouse
              expirationSeconds: 3600
              audience: idmouse
          - serviceAccountToken:
              path: sts.amazonaws.com
              expirationSeconds: 3600
              audience: sts.amazonaws.com
