reposnake/service-repo-noa-re.yaml
# Source: repo.noa.re
apiVersion: v1
kind: Service
metadata:
  name: repo-noa-re
  namespace: reposnake
spec:
  selector:
    app: repo-noa-re
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
