reposnake/gateway-repo-noa-re.yaml
# Source: repo.noa.re
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: repo-noa-re
  namespace: reposnake
spec:
  gatewayClassName: eg
  listeners:
  - name: repo-noa-re
    protocol: HTTPS
    hostname: repo.noa.re
    port: 443
    tls:
      certificateRefs:
      - name: repo-noa-re-tls
        group: ''
        kind: Secret
