reposnake/httproute-repo-noa-re.yaml
# Source: repo.noa.re
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: repo-noa-re
  namespace: reposnake
spec:
  parentRefs:
  - name: repo-noa-re
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - repo.noa.re
  rules:
  - backendRefs:
    - name: repo-noa-re
      port: 80
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
